--- a/pkp-lib/locale/en_US/user.xml
+++ b/pkp-lib/locale/en_US/user.xml
@@ -105,6 +105,11 @@
 	<message key="user.register.registerAs">Register as</message>
 	<message key="user.register">Register</message>
 	<message key="user.register.usernameRestriction">The username must contain only lowercase letters, numbers, and hyphens/underscores.</message>
+	<message key="user.role.author">Author</message>
+	<message key="user.role.author_s">Author(s)</message>
+	<message key="user.role.authors">Authors</message>
+	<message key="user.role.editor">Editor</message>
+	<message key="user.role.editors">Editors</message>
 	<message key="user.role.reader">Reader</message>
 	<message key="user.role.readers">Readers</message>
 	<message key="user.role.reviewer">Reviewer</message>
