--- a/pkp-lib/locale/en_US/common.xml
+++ b/pkp-lib/locale/en_US/common.xml
@@ -131,6 +131,7 @@
 	<message key="common.import">Import</message>
 	<message key="common.initiate">Initiate</message>
 	<message key="common.inProgress">In progress</message>
+	<message key="common.itemsPerPage">Items per page</message>
 	<message key="common.keywords">Keywords</message>
 	<message key="common.language">Language</message>
 	<message key="common.languages">Languages</message>
