--- a/pkp-lib/locale/en_US/admin.xml
+++ b/pkp-lib/locale/en_US/admin.xml
@@ -29,6 +29,7 @@
 	<message key="admin.displayNewSystemConfig">Display New Configuration</message>
 	<message key="admin.expireSessions">Expire User Sessions</message>
 	<message key="admin.languages.download">Download Locale</message>
+	<message key="admin.languages.downloadLocales">Download Locales</message>
 	<message key="admin.languages.download.cannotOpen">Cannot open language descriptor from PKP web site.</message>
 	<message key="admin.languages.download.cannotModifyRegistry">Cannot add the new locale to the locale registry file, typically "registry/locales.xml".</message>
 	<message key="admin.languages.cantDisable">This locale is the primary language of the site. You can't disable it until you choose another primary locale.</message>
