*8046* Partial port of context grid to PKP lib

--- a/pkp-lib/locale/en_US/common.xml
+++ b/pkp-lib/locale/en_US/common.xml
@@ -400,4 +400,6 @@
 
 	<!-- Common -->
 	<message key="grid.action.downloadFile">Download this file</message>
+
+	<message key="context.path">Path</message>
 </locale>
