--- a/ops/plugins/generic/lucene/README
+++ b/ops/plugins/generic/lucene/README
@@ -7,7 +7,7 @@ Contents
   4)  Embedded versus Remote Server Mode
   5)  Embedded Server Mode: Installation and Configuration
   6)  Central Server Mode: Installation and Configuration
-  7)  Installation and Configuration: Troubleshooting
+  7)  Troubleshooting
   8)  Push versus Pull Indexing
   9)  Rebuilding your index and/or dictionaries
   10) What else do I have to do to keep my index up to date?
@@ -178,7 +178,7 @@ download and install them before you can use the plug-in. The following
 paragraphs will explain how to do this. This will transform your OJS server into
 a Solr search server.
 
-  1) secure your server (IMPORTANT):
+  1) Secure your server (IMPORTANT):
      While we tried to make sure that our Solr configuration be secure by
      default, Solr has NOT been designed to be directly exposed to the internet.
      Please make sure that you have a firewall in place that denies public
@@ -192,7 +192,7 @@ a Solr search server.
        "admin: xxxxxxx,content_updater,admin" where xxxxxxx is to be replaced
        with a password you choose.
 
-  2) install java:
+  2) Install java:
      You'll need a working installation of the Java 2 Platform, Standard Edition
      (J2SE) Runtime Environment, Version 1.5 or higher. If you are on Linux then
      install a J2SE compliant Java package. If you are on Windows you may get
@@ -221,7 +221,13 @@ a Solr search server.
 
        If you are on Windows then download and unzip the file to the lib folder
        using your favorite browser and zip tool. Then rename the Jetty folder to
-       "jetty".
+       "jetty" or use the Windows "mklink" tool to create a symlink to the
+       unzipped folder, e.g.:
+          C:\...\ojs> cd plugins\generic\lucene\lib
+          C:\...\lib> mklink /d jetty jetty-6.1.26
+
+       Please make sure that you find the file "start.jar" in the jetty folder.
+       If not, you may have to unwrap the unzipped file hierarchy.
 
      - Solr: Get the latest Solr binary from an Apache download mirror and unzip
        it into plugins/generic/lucene/lib in your OJS application directory.
@@ -229,7 +235,8 @@ a Solr search server.
        We are using version 3.6.1 here as an example but the latest version may
        be different. Please change the following commands accordingly.
 
-       If you are on Linux execute something like:
+       If you are on Linux execute something like (from the OJS application
+       directory):
           #> cd plugins/generic/lucene/lib
           #> wget http://www.eu.apache.org/dist/lucene/solr/3.6.1/
                                                           apache-solr-3.6.1.zip
@@ -241,11 +248,33 @@ a Solr search server.
           #> ln -s apache-solr-3.6.1 solr
 
        On Windows download and unzip the file to the lib folder. Then rename the
-       Solr folder to "solr".
+       Solr folder to "solr" or use the Windows "mklink" tool to create a
+       symlink to the unzipped folder, e.g.:
+          C:\...\ojs> cd plugins\generic\lucene\lib
+          C:\...\lib> mklink /d solr apache-solr-3.6.1
 
-  4) Try starting the Solr server for the first time:
+       Please make sure that you find the "example" folder below the solr
+       folder. If not, you may have to unwrap the unzipped file hierarchy.
+
+  4) Check your installation:
+     We provide a script that finalizes the installation and helps you to make
+     sure that you correctly installed Jetty and Solr.
+
+     On Linux please execute (from the OJS directory):
+         #> cd plugins/generic/lucene/embedded/bin
+         #> ./chkconfig.sh
+
+     On Windows this would be:
+         C:\...\ojs> cd plugins\generic\lucene\embedded\bin
+         C:\...\lib> chkconfig.bat
+
+     If you get error messages then please return to step 3) and check your
+     installation.
+
+  5) Try starting the Solr server for the first time:
      Go to the directory plugins/generic/lucene/embedded/bin and execute the
-     start script there. On Linux this would be:
+     start script there. On Linux this would be (from the OJS application
+     directory):
          #> cd plugins/generic/lucene/embedded/bin
          #> ./start.sh
 
@@ -253,7 +282,15 @@ a Solr search server.
          #> ps -ef | grep solr
      you should see the java process of your running Solr instance.
 
-  5) Now open up your web browser and log into your OJS journal manager account.
+     On Windows this becomes:
+         C:\...\ojs> cd plugins\generic\lucene\embedded\bin
+         C:\...\lib> start.bat
+
+     And to check that Solr is actually running execute:
+         C:\...\ojs> wmic process get Caption,CommandLine | findstr solr
+     This should show you the java process running Solr.
+
+  6) Now open up your web browser and log into your OJS journal manager account.
 
      Go to "Journal Manager -> System Plugins -> Generic Plugins" and enable the
      "Lucene Search Plugin".
@@ -264,10 +301,12 @@ a Solr search server.
      In this case go to the plug-ins setting page and configure the password
      accordingly.
 
-  6) Build your lucene index:
+  7) Build your lucene index:
 
      Back to the command line go to the tools directory and execute the script
-     to rebuild your index:
+     to rebuild your index.
+
+     On Linux and from the OJS directory this becomes:
         #> cd tools
         #> php rebuildSearchIndex.php -d
 
@@ -277,10 +316,14 @@ a Solr search server.
         # LucenePlugin: Indexing "test" ... 536 articles indexed
         # LucenePlugin: Rebuilding dictionaries ... done
 
+     On Windows execute:
+         C:\...\ojs> cd tools
+         C:\...\tools> php rebuildSearchIndex.php -d
+
      Please make sure that the output really includes the "LucenePlugin" string.
      Otherwise your plug-in was not correctly activated.
 
-  7) Execute some searches
+  8) Execute some searches
 
      Go to your OJS web frontend and test whether searching with Solr works as
      expected.
@@ -380,10 +423,10 @@ specific to the OJS Lucene/Solr plug-in:
      with Solr works as expected.
 
 
-7 Installation and Configuration: Troubleshooting
--------------------------------------------------
+7 Troubleshooting
+-----------------
 
-If you have trouble installing or configuring the Solr server then you may try
+If you have trouble INSTALLING or CONFIGURING the Solr server then you may try
 the following:
 
 - If you get 'Allowed memory size ... exhausted' errors while doing an index
@@ -458,6 +501,34 @@ the following:
   you have difficulties in interpreting error messages in the log then please
   register a bug report at 'http://pkp.sfu.ca/bugzilla/' and post the most
   recent error message. This will help OJS developers to resolve your problem.
+
+If you get errors when STARTING or STOPPING the solr server (e.g. the server
+does not start or stop from the web interface or you cannot stop the server via
+scripts):
+
+- Please make sure that you always start/stop the server in the same way: Either
+  through shell scripts or through the web interface. Otherwise it may happen
+  that you encounter permission problems that have to do with the fact that your
+  web server runs under a different user account than your administrative
+  login. If you wish to run Solr under a specific account then you should
+  never use the web interface as it can only run the Server under the web server
+  account. You may want to write init scripts in this case that start the
+  process with the user of your choosing.
+
+- More generally, both on Windows and *nix, you'll have difficulties when
+  starting Solr from a different user than stopping it (e.g. on Windows from
+  an Administrator prompt and then trying to stop from a user prompt).
+
+- If you have permission problems then please make sure that the 'files/lucene'
+  directory and all subfolders and files therein are readable and writable by
+  the user account that runs Solr. You may have to change permissions if you
+  want to start the server differently than before.
+
+If you find that binary files (i.e. galleys or supplementary files) are NOT
+being correctly INDEXED:
+
+- Please make sure that the 'base_url' parameter in your OJS directory points
+  to the correct URL (without trailing slash).
 
 
 8 Push versus Pull Indexing
