--- a/pkp-lib/locale/de_DE/manager.xml
+++ b/pkp-lib/locale/de_DE/manager.xml
@@ -241,4 +241,36 @@
 	<message key="plugins.categories.themes">Designvorlagen-Plug-Ins</message>
 	<message key="plugins.categories.oaiMetadataFormats">Plug-In für OAI-Metadaten-Format</message>
 	<message key="plugins.categories.oaiMetadataFormats.description">Diese Format-Plug-Ins beziehen sich auf Metadaten für die OAI-Kommunikation</message>
+
+	<!-- Plugin management -->
+	<message key="manager.plugins.copyError">Das Plug-In wurde nicht erfolgreich kopiert</message>
+	<message key="manager.plugins.delete">Plug-In löschen</message>
+	<message key="manager.plugins.deleteConfirm">Sind Sie sicher, dass dieses Plug-In aus dem System entfernt werden soll?</message>
+	<message key="manager.plugins.deleteDescription">Wenn Sie löschen anklicken, wird das Plug-In aus dem Dateisystem des Servers entfernt.</message>
+	<message key="manager.plugins.deleteError">Das Plug-In konnte nicht aus dem Dateisystem gelöscht werden.</message>
+	<message key="manager.plugins.deleteSuccess">Plug-In erfolgreich gelöscht</message>
+	<message key="manager.plugins.description">Diese Seite ermöglicht es der/dem Zeitschriftenverwalter/in, die aktuell installierten Plug-Ins zu überprüfen und ggf. zu konfigurieren. Plug-Ins sind nach ihren Funktionen in Kategorien eingeteilt. Die entsprechenden Ordnungskategorien sind unten aufgeführt, darunter jeweils die derzeitig eingesetzten Plug-Ins.</message>
+	<message key="manager.plugins.doesNotExist">Plug-In nicht verfügbar.</message>
+	<message key="manager.plugins.fileSelectError">Bitte wählen Sie zuerst eine Datei aus</message>
+	<message key="manager.plugins.install">Ein neues Plug-In installieren</message>
+	<message key="manager.plugins.installDescription">Mit diesem Formular können Sie ein neues Plug-In hochladen und installieren. Bitte stellen Sie sicher, das das Plug-In als .tar.gz-Datei komprimiert ist.</message>
+	<message key="manager.plugins.installedVersionNewer">Das Plug-In existiert bereits und ist neuer als oder genauso alt wie die installierte Version.</message>
+	<message key="manager.plugins.installedVersionOlder">Das Plug-In existiert bereits, ist aber älter als oder genauso alt wie die installierte Version.</message>
+	<message key="manager.plugins.installFailed">Installation gescheitert</message>
+	<message key="manager.plugins.installSuccessful">Erfolgreich installierte Version</message>
+	<message key="manager.plugins.invalidPluginArchive">Das hochgeladene Plug-In-Archiv enthält keinen zum Plug-In-Namen passenden Ordner.</message>
+	<message key="manager.plugins.wrongCategory">Das hochgeladene Plug-In passt nicht zu der Kategorie des aktualisierten Plug-Ins.</message>
+	<message key="manager.plugins.wrongName">Die version.xml in dem hochgeladenen Plug-In enthält einen Plug-In-Namen, der nicht zu dem Namen des aktualisierten Plug-Ins passt.</message>
+	<message key="manager.plugins.pleaseInstall">Plug-In nicht verfügbar. Bitte wählen Sie installieren</message>
+	<message key="manager.plugins.pleaseUpgrade">Das Plug-In existiert bereits, ist aber neuer als die installierte Version. Bitte wählen Sie Upgrade</message>
+	<message key="manager.plugins.tarCommandNotFound">Der tar-Befehl ist nicht verfügbar. Bitte konfigurieren Sie ihn in Ihrer "config.inc.php".</message>
+	<message key="manager.plugins.upgrade">Upgrade Plug-In</message>
+	<message key="manager.plugins.upgradeDescription">Dieses Formular ermöglicht ein Upgrade für ein Plug-In. Bitte stellen Sie sicher, das das Plug-In als .tar.gz-Datei komprimiert ist.</message>
+	<message key="manager.plugins.upgradeFailed">Upgrade gescheitert</message>
+	<message key="manager.plugins.upgradeSuccessful">Erfolgreiches Upgrade</message>
+	<message key="manager.plugins.uploadError">Fehler beim Hochladen der Datei</message>
+	<message key="manager.plugins.uploadPluginDir">Plug-In-Datei auswählen</message>
+	<message key="manager.plugins.versionFileInvalid">version.xml im Plug-In-Verzeichnis enthält ungültige Daten.</message>
+	<message key="manager.plugins.versionFileNotFound">Version.xml wurde im Plug-In-Verzeichnis nicht gefunden</message>
+
 </locale>
