--- a/ojs/plugins/generic/lucene/locale/de_DE/locale.xml
+++ b/ojs/plugins/generic/lucene/locale/de_DE/locale.xml
@@ -13,7 +13,16 @@
 <locale name="de_DE" full_name="Deutsch (Deutschland)">
 	<message key="plugins.generic.lucene.displayName">Lucene-Suche-Plug-In</message>
 	<message key="plugins.generic.lucene.description">Das Lucene-Suche-Plug-In bietet Unterstützung von Mehrsprachigkeit, verbesserte Relevanz der Suchergebnisse, schnellere Indizierung, bessere Skalierung und mehr.</message>
-	
+
+	<message key="plugins.generic.lucene.faceting.title">Verfeinern Sie Ihre Suche</message>
+	<message key="plugins.generic.lucene.faceting.discipline">Disziplin</message>
+	<message key="plugins.generic.lucene.faceting.subject">Schlagwort</message>
+	<message key="plugins.generic.lucene.faceting.type">Methode/Ansatz</message>
+	<message key="plugins.generic.lucene.faceting.coverage">Bereich</message>
+	<message key="plugins.generic.lucene.faceting.journalTitle">Zeitschrift</message>
+	<message key="plugins.generic.lucene.faceting.authors">Autor/in</message>
+	<message key="plugins.generic.lucene.faceting.publicationDate">Veröffentlichungsdatum</message>	
+
 	<message key="plugins.generic.lucene.message.searchServiceOffline">Leider ist der OJS-Suchdienst momentan offline. Die/der technische Administrator/in ist über das Problem informiert worden.</message>
 	<message key="plugins.generic.lucene.message.coreNotFound">Der angeforderte Kern '{$core}' wurde nicht auf dem Solr-Server gefunden. Ist er online?</message>
 	<message key="plugins.generic.lucene.message.indexOnline">Index mit {$numDocs} Dokumenten online.</message>
@@ -28,16 +37,18 @@
 	<message key="plugins.generic.lucene.results.orderBy.article">Titel des Artikels</message>
 	<message key="plugins.generic.lucene.results.orderDir.asc">Aufsteigend</message>
 	<message key="plugins.generic.lucene.results.orderDir.desc">Absteigend</message>
-	<message key="plugins.generic.lucene.results.syntaxInstructions"><![CDATA[Suchhinweise: <ul>
-<li>Groß- und Kleinschreibung der Suchbegriffe werden nicht unterschieden.</li>
-<li>Häufig auftretende Wörter werden ignoriert.</li>
-<li>Standardmäßig werden alle Artikel aufgelistet, die mindestens <em>einen</em> Suchbegriff der Anfrage enthalten (d.h. <em>ODER</em> ist impliziert).</li>
-<li>Erzwingen Sie, dass ein Wort in einem Artikel existiert, indem Sie dem Wort ein <strong>+</strong> voranstellen; z.B. <em>+journal +access scholarly academic</em>.</li>
-<li>Kombinieren Sie mehrere Wörter mit <em>UND</em>, um Artikel zu finden, die alle Begriffe enthalten; z.B. <em>Bildung UND Forschung</em></li>
-<li>Schließen Sie ein Wort aus, indem Sie ihm ein <strong>-</strong> oder <em>NICHT</em> voranstellen; z.B. <em>online -politics</em> oder <em>online NICHT politics</em></li>
-<li>Suchen Sie nach einer genauen Wortfolge, indem Sie sie in Anführungszeichen setzen; z.B. <em>"open access publishing"</em></li>
-<li>Nutzen Sie Klammern für komplexere Suchanfragen; z.B. <em>Archive ((Zeitschrift UND Konferenz) NICHT Dissertationen)</em></li>
-</ul>]]></message>
+	<message key="plugins.generic.lucene.results.syntaxInstructions"><![CDATA[
+		Suchhinweise: <ul>
+			<li>Groß- und Kleinschreibung der Suchbegriffe werden nicht unterschieden.</li>
+			<li>Häufig auftretende Wörter werden ignoriert.</li>
+			<li>Standardmäßig werden alle Artikel aufgelistet, die mindestens <em>einen</em> Suchbegriff der Anfrage enthalten (d.h. <em>ODER</em> ist impliziert).</li>
+			<li>Erzwingen Sie, dass ein Wort in einem Artikel existiert, indem Sie dem Wort ein <strong>+</strong> voranstellen; z.B. <em>+journal +access scholarly academic</em>.</li>
+			<li>Kombinieren Sie mehrere Wörter mit <em>UND</em>, um Artikel zu finden, die alle Begriffe enthalten; z.B. <em>Bildung UND Forschung</em></li>
+			<li>Schließen Sie ein Wort aus, indem Sie ihm ein <strong>-</strong> oder <em>NICHT</em> voranstellen; z.B. <em>online -politics</em> oder <em>online NICHT politics</em></li>
+			<li>Suchen Sie nach einer genauen Wortfolge, indem Sie sie in Anführungszeichen setzen; z.B. <em>"open access publishing"</em>. Hinweis: Chinesische oder japanische Wörter in Anführungszeichen zu setzen, erlaubt Ihnen das Auffinden genauer Wortübereinstimmungen in gemischtsprachigen Feldern, z.B. "中国".</li>
+			<li>Nutzen Sie Klammern für komplexere Suchanfragen; z.B. <em>Archive ((Zeitschrift UND Konferenz) NICHT Dissertationen)</em></li>
+		 </ul>
+	]]></message>
 
 	<message key="plugins.generic.lucene.settings">Einstellungen</message>
 	<message key="plugins.generic.lucene.settings.description"><![CDATA[
@@ -45,6 +56,8 @@
 		<p><strong>Bitte achten Sie darauf, die README-Datei des Plug-Ins (plugins/generic/lucene/README) zu lesen, bevor Sie versuchen, die Standardeinstellungen zu verändern.</strong></p>
 		<p>Wenn Sie das eingebettete Szenario hinter einer Firewall, wie es in der README-Datei beschrieben ist, benutzen, können Sie wahrscheinlich alle Parameter der Konfiguration unverändert lassen.</p>
 	]]></message>
+	<message key="plugins.generic.lucene.settings.faceting">Facettierung (eine Box mit zusätzlichen Filter zur Verfeinerung der Suche anzeigen)</message>
+	<message key="plugins.generic.lucene.settings.facetingSelectCategory">Sie können spezifische Kategorien zur Facettierung auswählen (die entsprechenden Metadaten müssen im Setup, Schritt 3.4, zur Indizierung ausgewählt worden sein)</message>
 	<message key="plugins.generic.lucene.settings.instId">Eindeutige ID der Installation</message>
 	<message key="plugins.generic.lucene.settings.instIdRequired">Bitte geben Sie eine ID an, die diese OJS-Installation eindeutig gegenüber dem Solr-Suchserver identifiziert.</message>
 	<message key="plugins.generic.lucene.settings.instIdInstructions">Wenn Sie einen zentralen Suchserver benutzen, dann müssen Sie für jede OJS-Installation, die denselben Suchindex benutzt, eine eindeutige Installations-ID angeben. Dies kann ein beliebiger Text sein, der aber für jeden teilnehmenden OJS-Server unterschiedlich sein muss (z.B. die statische IP-Adresse des Servers, wenn Sie eine OJS-Installation pro Server nutzen).</message>
