--- a/ojs/locale/de_DE/author.xml
+++ b/ojs/locale/de_DE/author.xml
@@ -8,7 +8,6 @@
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
   * Localization strings for the de_DE (Deutsch (Deutschland)) locale.
-  *
   -->
 
 <locale name="de_DE" full_name = "Deutsch (Deutschland)">
@@ -69,7 +68,7 @@
 	<message key="author.submit.deleteAuthor">Autor/in löschen</message>
 	<message key="author.submit.submissionIndexingDescription">Stellen Sie Begriffe für die Indizierung des Beitrags zusammen; trennen Sie diese Begriffe durch ein Semikolon (Begriff1; Begriff2; Begriff3).</message>
 	<message key="author.submit.submissionSupportingAgencies">Mitwirkung und Unterstützung</message>
-	<message key="author.submit.submissionSupportingAgenciesDescription">Benennen Sie Personen, Organisationen oder Einrichtungen, die zu der Ihrer Einreichung zugrundeliegenden Arbeit beigetragen haben oder die die zugrundeliegende Arbeit finanziert oder unterstützt haben. Trennen Sie mit einem Semikolon (z.B. Johnn Doe, Metro University; Master University, Department of Computer Science).</message>
+	<message key="author.submit.submissionSupportingAgenciesDescription">Benennen Sie Personen, Organisationen oder Einrichtungen, die zu der Ihrer Einreichung zugrundeliegenden Arbeit beigetragen haben oder die die zugrundeliegende Arbeit finanziert oder unterstützt haben. Trennen Sie mit einem Semikolon (z.B. John Doe, Metro University; Master University, Department of Computer Science).</message>
 	<message key="author.submit.coverageInstructions">Bezieht sich auf den räumlich-geographischen sowie den zeitlichen Bereich und auf die Eigenschaften des Forschungsgegenstandes.</message>
 	<message key="author.submit.subjectClassInstructions">Benutzen Sie die verlinkte Schlagwortsystematik zur Auswahl von Klassifizierungsbegriffen und, falls zutreffend, -zahlen.></message>
 	<message key="author.submit.languageInstructions"><![CDATA[deutsch=de; englisch=en; französisch=fr; spanisch=es. <a href="http://www.loc.gov/standards/iso639-2/php/code_list.php" target="_blank">zusätzliche Kodierungen</a>.]]></message>
@@ -121,7 +120,7 @@
 	<message key="author.submit.filesSummary">Zusammenfassung</message>
 	<message key="author.submit.finishSubmission">Einreichung abschließen</message>
 	<message key="author.submit.submissionComplete">Die Einreichung ist abgeschlossen. Vielen Dank für Ihr Interesse an einer Veröffentlichung bei {$journalTitle}.</message>
-	<message key="author.submit.expedite"><![CDATA[Falls der Beitrag in einer Form vorliegt, in der er ohne weitere Begutachtung, Bearbeitung oder Layoutänderungen veröffentlicht werden kann, kann er direkt in die letzte Phase der Redaktionsliste eingefügt werden: <a href="{$expediteUrl}" class="action">Hier klicken</a>. (Achtung: Nur Redakteur/innen der Zeitschrift steht diese Möglichkeit für ihre eigenen Beiträge offen.)]]></message>
+	<message key="author.submit.expedite"><![CDATA[Falls der Beitrag in einer Form vorliegt, in der er ohne weitere Begutachtung, Bearbeitung oder Layoutänderungen veröffentlicht werden kann, kann er direkt in die letzte Phase der Redaktionsliste eingefügt werden: <a href="{$expediteUrl}" class="action">Hier klicken</a>. (Achtung: Nur Redakteur/innen der Zeitschrift haben diese Möglichkeit für ihre eigenen Beiträge.)]]></message>
 	<message key="author.article.uploadAuthorVersion">Autor/innenversion hochladen</message>
 	<message key="author.article.copyeditedFile">Lektorierte Datei</message>
 	<message key="author.article.authorRevisedFile">Autor/innendatei</message>
