--- a/ojs/locale/zh_CN/manager.xml
+++ b/ojs/locale/zh_CN/manager.xml
@@ -2,12 +2,12 @@
 <!DOCTYPE locale SYSTEM "../../lib/pkp/dtd/locale.dtd">
 
 <!--
-  * locale/en_US/manager.xml
+  * locale/zh_CN/manager.xml
   *
   * Copyright (c) 2003-2012 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
-  * Localization strings for the en_US (English) locale.
+  * Localization strings.
   *
   -->
 
