*7834* id_ID tune-ups

--- a/ojs/locale/id_ID/emailTemplates.xml
+++ b/ojs/locale/id_ID/emailTemplates.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE email_texts SYSTEM "../../lib/pkp/dtd/emailTemplateData.dtd">
 
+<!--
+  * locale/id_ID/locale.xml
+  *
+  * Copyright (c) 2003-2012 John Willinsky
+  * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
+  *
+  * Localization strings.
+  -->
+
 <email_texts locale="id_ID">
 	<email_text key="NOTIFICATION">
 		<subject>Notifikasi baru dari {$siteTitle}</subject>
