--- a/ojs/locale/id_ID/admin.xml
+++ b/ojs/locale/id_ID/admin.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE locale SYSTEM "../../lib/pkp/dtd/locale.dtd">
 
+<!--
+  * locale/id_ID/locale.xml
+  *
+  * Copyright (c) 2003-2012 John Willinsky
+  * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
+  *
+  * Localization strings.
+  -->
+
 <locale name="id_ID" full_name = "Indonesia">
 	<message key="admin.hostedJournals">Host Jurnal</message>	<message key="admin.settings.journalRedirect">Pengalihan Jurnal</message> 
 	<message key="admin.settings.journalRedirectInstructions"> Permintaan ke situs utama akan dialihkan ke jurnal ini. Hal ini mungkin berguna jika hosting merupakan jurnal tunggal.</message>	
