--- a/ojs/locale/id_ID/editor.xml
+++ b/ojs/locale/id_ID/editor.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE locale SYSTEM "../../lib/pkp/dtd/locale.dtd">
 
+<!--
+  * locale/id_ID/locale.xml
+  *
+  * Copyright (c) 2003-2012 John Willinsky
+  * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
+  *
+  * Localization strings.
+  -->
 
 <locale name="id_ID" full_name = "Indonesia">
 	<message key="editor.article.reviewForms"> Form Review </message> 
