--- a/ojs/plugins/generic/counter/locale/id_ID/locale.xml
+++ b/ojs/plugins/generic/counter/locale/id_ID/locale.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE locale SYSTEM "../../../../../lib/pkp/dtd/locale.dtd">
 
+<!--
+  * locale/id_ID/locale.xml
+  *
+  * Copyright (c) 2003-2012 John Willinsky
+  * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
+  *
+  * Localization strings.
+  -->
+
 <locale name="id_ID" full_name="Indonesia">
 	<message key="plugins.generic.counter.description"><![CDATA[COUNTER plugin bisa merekam dan <a href="http://www.projectcounter.org/about.html" target="_new">COUNTER</a> melaporkan di aktifitas situs.]]></message> 
 	<message key="plugins.generic.counter"> Statistik COUNTER </message> 
