--- a/ojs/plugins/generic/webFeed/locale/id_ID/locale.xml
+++ b/ojs/plugins/generic/webFeed/locale/id_ID/locale.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE locale SYSTEM "../../../../../lib/pkp/dtd/locale.dtd">
 
+<!--
+  * locale/id_ID/locale.xml
+  *
+  * Copyright (c) 2003-2012 John Willinsky
+  * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
+  *
+  * Localization strings.
+  -->
+
 <locale name="id_ID" full_name="Indonesia">
 	<message key="plugins.generic.webfeed.displayName">Plugin Feed Web </message> 
 	<message key="plugins.generic.webfeed.description"> Plugin ini menghasilkan RSS/ Atom web syndication feeds untuk terbitan sekarang.</message> 
