--- a/pkp-lib/locale/id_ID/admin.xml
+++ b/pkp-lib/locale/id_ID/admin.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE locale SYSTEM "../../dtd/locale.dtd">
 
+<!--
+  * locale/id_ID/admin.xml
+  *
+  * Copyright (c) 2003-2012 John Willinsky
+  * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
+  *
+  * Localization strings.
+  -->
+
 <locale name="id_ID" full_name = "Indonesia">
 	<message key="admin.adminFunctions">Fungsi Administratif</message>
 	<message key="admin.auth.confirmDelete"> Apakah Anda yakin ingin menghapus sumber pengesahan ini secara permanen?</message>
