--- a/pkp-lib/locale/id_ID/common.xml
+++ b/pkp-lib/locale/id_ID/common.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE locale SYSTEM "../../dtd/locale.dtd">
 
+<!--
+  * locale/id_ID/common.xml
+  *
+  * Copyright (c) 2003-2012 John Willinsky
+  * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
+  *
+  * Localization strings.
+  -->
+
 <locale name="id_ID" full_name = "Indonesia">
 	<message key="about.aboutSite">Tentang Kami</message>
 	<message key="about.contact">Kontak</message>
