--- a/pkp-lib/locale/id_ID/languages.xml
+++ b/pkp-lib/locale/id_ID/languages.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE languages SYSTEM "../../dtd/languages.dtd">
 
+<!--
+  * locale/id_ID/languages.xml
+  *
+  * Copyright (c) 2003-2012 John Willinsky
+  * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
+  *
+  * Localization strings.
+  -->
+
 <languages>
 	<language code="en" name="English"/>
 	<language code="id" name="Indonesia"/>
