--- a/pkp-lib/locale/id_ID/manager.xml
+++ b/pkp-lib/locale/id_ID/manager.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE locale SYSTEM "../../dtd/locale.dtd">
 
+<!--
+  * locale/id_ID/manager.xml
+  *
+  * Copyright (c) 2003-2012 John Willinsky
+  * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
+  *
+  * Localization strings.
+  -->
+
 <locale name="id_ID" full_name = "Indonesia">
 	<message key="manager.announcements">Pengumuman</message>
 	<message key="manager.announcements.confirmDelete">Apakah Anda yakin ingin menghapus pengumuman ini secara permanen?</message>
