--- a/pkp-lib/locale/id_ID/submission.xml
+++ b/pkp-lib/locale/id_ID/submission.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE locale SYSTEM "../../dtd/locale.dtd">
 
+<!--
+  * locale/id_ID/submission.xml
+  *
+  * Copyright (c) 2003-2012 John Willinsky
+  * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
+  *
+  * Localization strings.
+  -->
+
 <locale name="id_ID" full_name = "Indonesia">
 	<!-- Author Submission -->
 	<message key="author.submit.submissionCitations">Sediakan daftar referensi yang telah diformat untuk karya yang dikutip di penyerahan ini. Pisahkan referensi individu dengan garis kosong.</message>
