--- a/pkp-lib/locale/sv_SE/currencies.xml
+++ b/pkp-lib/locale/sv_SE/currencies.xml
@@ -2,26 +2,24 @@
 <!DOCTYPE currencies SYSTEM "../../dtd/currencies.dtd">
 
 <!--
-  * locale/id_ID/currencies.xml
+  * locale/sv_SE/currencies.xml
   *
-  * Copyright (c) 2003-2012 John Willinsky
+  * Copyright (c) 2000-2012 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
-  * Localization strings.
+  * Currencies data XML file. Based on ISO 4217.
+  *
   -->
 
-<currencies locale="id_ID">
-	<currency name="US dollar" code_alpha="USD" code_numeric="840" />
-	<currency name="Euro" code_alpha="EUR" code_numeric="978" />
-	<currency name="Canadian dollar" code_alpha="CAD" code_numeric="124" />
+<currencies locale="no_NO">
 	<currency name="United Arab Emirates dirham" code_alpha="AED" code_numeric="784" />
 	<currency name="Afghani" code_alpha="AFN" code_numeric="971" />
 	<currency name="Lek" code_alpha="ALL" code_numeric="008" />
 	<currency name="Armenian dram" code_alpha="AMD" code_numeric="051" />
 	<currency name="Netherlands Antillean guilder" code_alpha="ANG" code_numeric="532" />
 	<currency name="Kwanza" code_alpha="AOA" code_numeric="973" />
-	<currency name="Argentine peso" code_alpha="ARS" code_numeric="032" />
-	<currency name="Australian dollar" code_alpha="AUD" code_numeric="036" />
+	<currency name="Argentinsk Peso" code_alpha="ARS" code_numeric="032" />
+	<currency name="Australsk Dollar" code_alpha="AUD" code_numeric="036" />
 	<currency name="Aruban guilder" code_alpha="AWG" code_numeric="533" />
 	<currency name="Azerbaijanian manat" code_alpha="AZN" code_numeric="944" />
 	<currency name="Convertible marks" code_alpha="BAM" code_numeric="977" />
@@ -34,33 +32,35 @@
 	<currency name="Brunei dollar" code_alpha="BND" code_numeric="096" />
 	<currency name="Boliviano" code_alpha="BOB" code_numeric="068" />
 	<currency name="Bolivian Mvdol (funds code)" code_alpha="BOV" code_numeric="984" />
-	<currency name="Brazilian real" code_alpha="BRL" code_numeric="986" />
+	<currency name="Brasiliansk Real" code_alpha="BRL" code_numeric="986" />
 	<currency name="Bahamian dollar" code_alpha="BSD" code_numeric="044" />
 	<currency name="Ngultrum" code_alpha="BTN" code_numeric="064" />
 	<currency name="Pula" code_alpha="BWP" code_numeric="072" />
 	<currency name="Belarussian ruble" code_alpha="BYR" code_numeric="974" />
 	<currency name="Belize dollar" code_alpha="BZD" code_numeric="084" />
+	<currency name="Canadisk Dollar" code_alpha="CAD" code_numeric="124" />
 	<currency name="Franc Congolais" code_alpha="CDF" code_numeric="976" />
-	<currency name="Swiss franc" code_alpha="CHF" code_numeric="756" />
-	<currency name="Chilean peso" code_alpha="CLP" code_numeric="152" />
+	<currency name="Sveitsisk Franc" code_alpha="CHF" code_numeric="756" />
+	<currency name="Chilensk Peso" code_alpha="CLP" code_numeric="152" />
 	<currency name="Renminbi" code_alpha="CNY" code_numeric="156" />
 	<currency name="Colombian peso" code_alpha="COP" code_numeric="170" />
 	<currency name="Unidad de Valor Real" code_alpha="COU" code_numeric="970" />
 	<currency name="Costa Rican colon" code_alpha="CRC" code_numeric="188" />
 	<currency name="Cuban peso" code_alpha="CUP" code_numeric="192" />
 	<currency name="Cape Verde escudo" code_alpha="CVE" code_numeric="132" />
-	<currency name="Czech koruna" code_alpha="CZK" code_numeric="203" />
+	<currency name="Tsjekkisk Koruna" code_alpha="CZK" code_numeric="203" />
 	<currency name="Djibouti franc" code_alpha="DJF" code_numeric="262" />
-	<currency name="Danish krone" code_alpha="DKK" code_numeric="208" />
+	<currency name="Dansk Krone" code_alpha="DKK" code_numeric="208" />
 	<currency name="Dominican peso" code_alpha="DOP" code_numeric="214" />
 	<currency name="Algerian dinar" code_alpha="DZD" code_numeric="012" />
 	<currency name="Kroon" code_alpha="EEK" code_numeric="233" />
-	<currency name="Egyptian pound" code_alpha="EGP" code_numeric="818" />
+	<currency name="Egyptisk Pund" code_alpha="EGP" code_numeric="818" />
 	<currency name="Nakfa" code_alpha="ERN" code_numeric="232" />
 	<currency name="Ethiopian birr" code_alpha="ETB" code_numeric="230" />
+	<currency name="Euro" code_alpha="EUR" code_numeric="978" />
 	<currency name="Fiji dollar" code_alpha="FJD" code_numeric="242" />
 	<currency name="Falkland Islands pound" code_alpha="FKP" code_numeric="238" />
-	<currency name="Pound sterling" code_alpha="GBP" code_numeric="826" />
+	<currency name="Britisk Pund" code_alpha="GBP" code_numeric="826" />
 	<currency name="Lari" code_alpha="GEL" code_numeric="981" />
 	<currency name="Cedi" code_alpha="GHS" code_numeric="936" />
 	<currency name="Gibraltar pound" code_alpha="GIP" code_numeric="292" />
@@ -78,10 +78,10 @@
 	<currency name="Indian rupee" code_alpha="INR" code_numeric="356" />
 	<currency name="Iraqi dinar" code_alpha="IQD" code_numeric="368" />
 	<currency name="Iranian rial" code_alpha="IRR" code_numeric="364" />
-	<currency name="Iceland krona" code_alpha="ISK" code_numeric="352" />
+	<currency name="Islandsk Krone" code_alpha="ISK" code_numeric="352" />
 	<currency name="Jamaican dollar" code_alpha="JMD" code_numeric="388" />
 	<currency name="Jordanian dinar" code_alpha="JOD" code_numeric="400" />
-	<currency name="Japanese yen" code_alpha="JPY" code_numeric="392" />
+	<currency name="Japansk Yen" code_alpha="JPY" code_numeric="392" />
 	<currency name="Kenyan shilling" code_alpha="KES" code_numeric="404" />
 	<currency name="Som" code_alpha="KGS" code_numeric="417" />
 	<currency name="Riel" code_alpha="KHR" code_numeric="116" />
@@ -110,13 +110,13 @@
 	<currency name="Mauritius rupee" code_alpha="MUR" code_numeric="480" />
 	<currency name="Rufiyaa" code_alpha="MVR" code_numeric="462" />
 	<currency name="Kwacha" code_alpha="MWK" code_numeric="454" />
-	<currency name="Mexican peso" code_alpha="MXN" code_numeric="484" />
+	<currency name="Meksikansk Peso (nye)" code_alpha="MXN" code_numeric="484" />
 	<currency name="Malaysian ringgit" code_alpha="MYR" code_numeric="458" />
 	<currency name="Metical" code_alpha="MZN" code_numeric="943" />
 	<currency name="Namibian dollar" code_alpha="NAD" code_numeric="516" />
 	<currency name="Naira" code_alpha="NGN" code_numeric="566" />
 	<currency name="Cordoba oro" code_alpha="NIO" code_numeric="558" />
-	<currency name="Norwegian krone" code_alpha="NOK" code_numeric="578" />
+	<currency name="Norsk krone" code_alpha="NOK" code_numeric="578" />
 	<currency name="Nepalese rupee" code_alpha="NPR" code_numeric="524" />
 	<currency name="New Zealand dollar" code_alpha="NZD" code_numeric="554" />
 	<currency name="Rial Omani" code_alpha="OMR" code_numeric="512" />
@@ -125,18 +125,18 @@
 	<currency name="Kina" code_alpha="PGK" code_numeric="598" />
 	<currency name="Philippine peso" code_alpha="PHP" code_numeric="608" />
 	<currency name="Pakistan rupee" code_alpha="PKR" code_numeric="586" />
-	<currency name="Zloty" code_alpha="PLN" code_numeric="985" />
+	<currency name="Polsk Zloty" code_alpha="PLN" code_numeric="985" />
 	<currency name="Guarani" code_alpha="PYG" code_numeric="600" />
 	<currency name="Qatari rial" code_alpha="QAR" code_numeric="634" />
 	<currency name="Romanian new leu" code_alpha="RON" code_numeric="946" />
 	<currency name="Serbian dinar" code_alpha="RSD" code_numeric="941" />
-	<currency name="Russian ruble" code_alpha="RUB" code_numeric="643" />
+	<currency name="Russisk Rubel" code_alpha="RUB" code_numeric="643" />
 	<currency name="Rwanda franc" code_alpha="RWF" code_numeric="646" />
 	<currency name="Saudi riyal" code_alpha="SAR" code_numeric="682" />
 	<currency name="Solomon Islands dollar" code_alpha="SBD" code_numeric="090" />
 	<currency name="Seychelles rupee" code_alpha="SCR" code_numeric="690" />
 	<currency name="Sudanese pound" code_alpha="SDG" code_numeric="938" />
-	<currency name="Swedish krona" code_alpha="SEK" code_numeric="752" />
+	<currency name="Svensk Krone" code_alpha="SEK" code_numeric="752" />
 	<currency name="Singapore dollar" code_alpha="SGD" code_numeric="702" />
 	<currency name="Saint Helena pound" code_alpha="SHP" code_numeric="654" />
 	<currency name="Slovak koruna" code_alpha="SKK" code_numeric="703" />
@@ -157,6 +157,7 @@
 	<currency name="Tanzanian shilling" code_alpha="TZS" code_numeric="834" />
 	<currency name="Hryvnia" code_alpha="UAH" code_numeric="980" />
 	<currency name="Uganda shilling" code_alpha="UGX" code_numeric="800" />
+	<currency name="US dollar" code_alpha="USD" code_numeric="840" />
 	<currency name="Peso Uruguayo" code_alpha="UYU" code_numeric="858" />
 	<currency name="Uzbekistan som" code_alpha="UZS" code_numeric="860" />
 	<currency name="Venezuelan bolívar fuerte" code_alpha="VEF" code_numeric="937" />
