--- a/pkp-lib/plugins/citationParser/parscit/locale/id_ID/locale.xml
+++ b/pkp-lib/plugins/citationParser/parscit/locale/id_ID/locale.xml
@@ -7,7 +7,7 @@
   * Copyright (c) 2003-2012 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
-  * Localization strings for the en_US (U.S. English) locale.
+  * Localization strings
   -->
 
 <locale name="id_ID" full_name="Indonesia">
